# transcriber-rag

./: .gitignore  README.md  app.py  pyproject.toml
transcriber_rag.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
