[project]
name = "transcriber-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9,<3.14"
dependencies = [
    "pydantic",
    "streamlit",
    "PyAudio",
    "pyaudiowpatch",
    "deepgram-sdk",
    "langchain-community",
    "langchain",
    "langgraph",
    "langsmith",
    "langchain-milvus",
    "langchain-cohere",
    "langchain-google-genai",
    "pymilvus",
    "nest_asyncio",
]
